# IOTA

secure-node-manager/: Cargo.toml
secure-node-manager/docs/: GETTING_STARTED.md
secure-node-manager/src/: lib.rs  main.rs
secure-node-manager/src/core/: event_loop.rs  mod.rs  node.rs
secure-node-manager/tests/: integration_test.rs
